--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>com.admin4j</groupId>
+        <artifactId>framework</artifactId>
+        <version>0.0.5</version>
+    </parent>
+
     <groupId>com.admin4j</groupId>
     <artifactId>plugin-example</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>pom</packaging>
     <modules>
         <module>plugin-example-api</module>
-        <module>plugin-example-impl</module>
+        <module>plugin-example-impl-one</module>
         <module>plugin-example-impl-two</module>
         <module>plugin-example-main</module>
     </modules>
