--- a/plugin-example-api/pom.xml
+++ b/plugin-example-api/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.admin4j</groupId>
         <artifactId>plugin-example</artifactId>
-        <version>1.0</version>
+        <version>1.1</version>
     </parent>
 
     <artifactId>plugin-example-api</artifactId>
@@ -20,8 +20,7 @@
     <dependencies>
         <dependency>
             <groupId>com.admin4j</groupId>
-            <artifactId>plugin-anno</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>plugin-api</artifactId>
         </dependency>
     </dependencies>
 </project>
