--- a/plugin-example-main/pom.xml
+++ b/plugin-example-main/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>com.admin4j</groupId>
             <artifactId>plugin-example-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.1</version>
         </dependency>
         <dependency>
             <groupId>com.admin4j</groupId>
