--- a/plugin-example-api/pom.xml
+++ b/plugin-example-api/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.admin4j</groupId>
         <artifactId>plugin-example</artifactId>
-        <version>1.1</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>plugin-example-api</artifactId>
