--- a/plugin-example-impl-one/pom.xml
+++ b/plugin-example-impl-one/pom.xml
@@ -4,13 +4,13 @@
     <parent>
         <groupId>com.admin4j</groupId>
         <artifactId>plugin-example</artifactId>
-        <version>1.1</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>plugin-example-impl-one</artifactId>
     <packaging>jar</packaging>
 
-    <name>plugin-example-impl</name>
+    <name>plugin-example-impl-one</name>
     <url>http://maven.apache.org</url>
 
     <properties>
