--- a/plugin-example-impl-two/pom.xml
+++ b/plugin-example-impl-two/pom.xml
@@ -4,14 +4,13 @@
     <parent>
         <groupId>com.admin4j</groupId>
         <artifactId>plugin-example</artifactId>
-        <version>1.1</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>plugin-example-impl-two</artifactId>
     <packaging>jar</packaging>
 
     <name>plugin-example-impl-two</name>
-    <url>http://maven.apache.org</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -26,7 +25,6 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
